# fuzzyplot

./: Cargo.toml  README.md
src/: main.rs
src/fuzzyplot/: cli.rs  diff.rs  mod.rs  setup.rs
