[package]
name = "fuzzyplot"
version = "0.1.1"
authors = ["Autumn! <autumnull@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
clap = "2.32.0"
image = "0.23.14"
mexprp = "0.3.0"
rug = "1.12.0"
structopt = "0.3.22"
