[package]
name = "fuzzyplot"
version = "0.1.2"
authors = ["Autumn! <autumnull@protonmail.com>"]
license = "AGPL-3.0-or-later"
description = "A fuzzier graph plotting method"
readme = "README.md"
homepage = "https://github.com/autumnull/fuzzyplot"
repository = "https://github.com/autumnull/fuzzyplot"
keywords = ["math", "graph", "plot", "equation", "fuzzy"]
categories = ["command-line-utilities", "mathematics"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
clap = "2.32.0"
image = "0.23.14"
indicatif = "0.16.2"
itertools = "0.8.2"
mexprp = "0.3.0"
rug = "1.12.0"
structopt = "0.3.22"
